kubernetes/apps/observability/grafana/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.ts.pid1.co`)
      kind: Rule
      services:
        - name: grafana-service
          port: 3000
  tls: {}
